--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li>นางสาว ชลลดา ผลดี</li>
             <li>นาย นราธิป แสงจันดา</li>
             <li>นางสาว วรินรำไพ ขุนภักดี</li>
-            <li>นาย วิศวะ ดำชมทรัพย์ </a></li>
+            <li><a href="Profile/ProfileReem/ProfileReem.html"> นาย วิศวะ ดำชมทรัพย์ </a></li>
         </div>
     </div>
 </body>
