--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li>นางสาว สกุลรัตน์ ปลูกสกุล</li>
             <li>นางสาว ศิรดา สุนทร</li>
             <li>นาย สุพล แซ่เจี่ย</li>
-            <li>นางสาว ชลลดา ผลดี</li>
+            <li><a href="Profile/ProfileChonlada/Untitled-1.html"> นางสาว ชลลดา ผลดี </a></li>
             <li>นาย นราธิป แสงจันดา</li>
             <li>นางสาว วรินรำไพ ขุนภักดี</li>
             <li><a href="Profile/ProfileReem/ProfileReem.html"> นาย วิศวะ ดำชมทรัพย์ </a></li>
