--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>นาย ณภัทร คำเสน</li>
             <li>นาย ณัฐดนัย เอี่ยมสะอาด</li>
             <li>นาย ณัฐภัทร ศรีสนาม</li>
-            <li>นาย นคร ศรีเกษม</li>
+            <li><a href="Profile/Profile Nakorn/งาน.html"> นาย นคร ศรีเกษม</a><li>
             <li>นางสาว พฤกษา แก้วมณี</li>
             <li>นาย พีระพล สายยศ</li>
             <li>นาย เมธาพนธ์ ช่างอาจ</li>
