Edit Profile Mauy

--- a/Profile/ProfileWatsapond/ProfileMuay.html
+++ b/Profile/ProfileWatsapond/ProfileMuay.html
@@ -1,16 +1,17 @@
 ﻿<HTML>
-<HEAD><center><B><FONT FACE="IrisUPC"><FONT SIZE=+7><FONT COLOR="FF69B4">PROFILE</FONT></FONT></FONT></B></center></HEAD>
-<BODY>
-<BR><center><img src= file:///C:/Users/Admin/Pictures/muay.jpg width="650" height="450" /></center>
-<BR> 
-<BR><center>ชื่อ นางสาววรรษพร ขุนทร </center>
-<BR> <center>ชื่อเล่น หมวย</center>
-<BR><center> เกิด 15 พฤษภาคม พ.ศ.2543</center>
-<BR><center> ศึกษาที่ สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</center>
-<BR> <center>คณะครุศาสตร์อุตสาหกรรมและเทคโนโลยี สาขาครุศาสตร์วิศวกรรม แขนงวิศวกรรมคอมพิวเตอร์</center>
-<BR><center> FACEBOOK:วรรษพร ขุนทร</center>
-<BR><center> EMAIL:61030050@kmitl.ac.th</center>
-
+<HEAD>
+    <center><B><FONT FACE="IrisUPC"><FONT SIZE=+7><FONT COLOR="FF69B4">PROFILE</FONT></FONT></FONT></B></center>
+</HEAD>
+    <BODY>
+        <br><center><img src="mauy.jpg" alt="" width=650  height=450 srcset=""></center>
+    <!-- <BR><center><img src= file:///C:/Users/Admin/Pictures/muay.jpg width="650" height="450" /></center><BR>  -->
+    <BR><center>ชื่อ นางสาววรรษพร ขุนทร </center>
+    <BR> <center>ชื่อเล่น หมวย</center>
+    <BR><center> เกิด 15 พฤษภาคม พ.ศ.2543</center>
+    <BR><center> ศึกษาที่ สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</center>
+    <BR> <center>คณะครุศาสตร์อุตสาหกรรมและเทคโนโลยี สาขาครุศาสตร์วิศวกรรม แขนงวิศวกรรมคอมพิวเตอร์</center>
+    <BR><center> FACEBOOK:วรรษพร ขุนทร</center>
+    <BR><center> EMAIL:61030050@kmitl.ac.th</center>
 
 <BODY BGCOLOR="#FFB6C1">
 
