--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li>นาย เมธาพนธ์ ช่างอาจ</li>
             <li><a href="Profile/ProfileWatsapond/ProfileMuay.html">นางสาว วรรษพร ขุนทร</a></li>
             <li><a href="Profile/Profile Suprakron/Untitled-1.html"> นาย ศุภกร มาประชุม</a></li>
-            <li><a href="Profile/Profile-Boat_Programmer/index.html"> นาย ศุภพิชญ์ สุขะ</li>
+            <li><a href="Profile/Profile-Boat_Programmer/index.html"> นาย ศุภพิชญ์ สุขะ</a></li>
             <li>นางสาว สกุลรัตน์ ปลูกสกุล</li>
             <li>นางสาว ศิรดา สุนทร</li>
             <li>นาย สุพล แซ่เจี่ย</li>
