--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="listname">
             <li>นาย  กรุงไทย สุ่มพ่วง</li>
-            <li>นางสาว ขนิษฐา วิริยะเตโชชัย</li>
+            <li><a href="Profile/Profile khanita/khanita.html">นางสาว ขนิษฐา วิริยะเดโชชัย</li>
             <li>นาย คมกรช แดงนวล</li>
             <li>นางสาว จณิสตา พิมพาทอง</li>
             <li>นางสาว เจนจิรา อินทรสุข</li>
